As 게시글 조회 연습

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "mysql1234",
-    "database": "Smart_Dormitory",
+    "database": "test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
