--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "mysql1234",
+    "password": "ansxogh11!",
     "database": "Smart_Dormitory",
     "host": "127.0.0.1",
     "dialect": "mysql"
