--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.0.1",
   "description": "스마트기숙사",
   "main": "app.js",
+  "private": true,
   "scripts": {
-    "start": "nodemon app"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
@@ -17,6 +21,16 @@
   },
   "homepage": "https://github.com/KooAme/DormitoryApp.git",
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.1",
+    "faker": "^6.6.6",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
@@ -26,5 +40,23 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
