--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "mysql1234",
-    "database": "test",
+    "password": "1234",
+    "database": "smart_dormitory",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
