--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "스마트기숙사",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app"
+    "start": "react-scripts start",
+    "serverApp": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -17,14 +18,32 @@
   },
   "homepage": "https://github.com/KooAme/DormitoryApp.git",
   "dependencies": {
+    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-index": "^1.0.6",
+    "react-scripts": "^5.0.1",
     "sequelize": "^6.19.0",
     "sequelize-cli": "^6.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
