--- a/package.json
+++ b/package.json
@@ -18,12 +18,19 @@
   },
   "homepage": "https://github.com/KooAme/DormitoryApp.git",
   "dependencies": {
+    "atob": "^2.1.2",
     "axios": "^0.27.2",
+    "blob": "^0.1.0",
+    "blob-stream": "^0.1.3",
     "body-parser": "^1.20.0",
+    "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3",
+    "node-blob": "^0.0.2",
+    "pdfkit": "^0.13.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-index": "^1.0.6",
@@ -32,7 +39,9 @@
     "sequelize-cli": "^6.4.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "fs": "^0.0.1-security",
+    "nodemon": "^2.0.16",
+    "webpack-cli": "^4.9.2"
   },
   "browserslist": {
     "production": [
