--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.1",
+    "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "daterangepicker": "^3.1.0",
     "faker": "^6.6.6",
+    "http-proxy-middleware": "^2.0.6",
     "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-date-range": "^1.4.0",
@@ -43,5 +44,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
